# wechat-cc

./: .gitignore  Cargo.toml  README.md  config.example.yaml
.claude/skills/wechat-cc-test/: SKILL.md
.claude/skills/wechat-cc-test/references/: common_bugs.md  test_map.md
design/: README.md  database.js
docker/: Dockerfile.sandbox
files/: architecture.mermaid  claude-executor.js  config.example.yaml  config.js  docker-compose.yaml  docker-manager.js  index.js  message-router.js  package.json
src/: claude_executor.rs  config.rs  database.rs  docker_manager.rs  error.rs  main.rs  message_router.rs  telegram_bot.rs  wechat_bot.rs
